--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,17 +4,10 @@ platform :ios, '14.0'
 target 'Runner' do
   use_frameworks!
   
-  # Pods for a Flutter application are defined below.
-  # Use the Flutter tool to add pods when you add a plugin.
-  # For example, a pod for a plugin called 'path_provider'
-  # would be added as follows:
-  #   pod 'path_provider', :path => '../.symlinks/plugins/path_provider/ios'
+  # Pods for your Flutter application are defined below.
+  # This simpler Podfile will work even if you don't have
+  # any Flutter plugins that require native iOS code.
   
-  # THIS LINE IS CRITICAL. IT AUTOMATICALLY LOADS YOUR FLUTTER PLUGINS.
-  flutter_application_path = File.join(File.dirname(__FILE__), '..')
-  eval(File.read(File.join(flutter_application_path, '.flutter-plugins')))
-
-  target 'RunnerTests' do
-    inherit! :search_paths
-  end
+  # You can add your own pods here if needed.
+  # For example: pod 'Firebase/Core', '~> 6.0'
 end
